--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,7 @@ name: Build Project
 
 on:
   push:
-    tags:
-      - v[0-9].[0-9]+.[0-9]+*
-  # pr's will trigger this action. i think the idea here is to verify that a build is passing before merging.
-  pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
   
 jobs:
   Build_Release:
@@ -111,26 +106,3 @@ jobs:
           files: |
             Release.zip
             Debug.zip
-  
-  Notification:
-    if: ${{ github.event_name == 'push' && github.repository == 'BitCrackers/AmongUsMenu' }}
-    runs-on: ubuntu-latest
-    needs: [AutoRelease]
-    steps:
-      - name: Parse tag into env
-        # credit: mcraiha via [https://github.community/t/how-to-get-just-the-tag-name/16241/17]
-        id: get_tag
-        shell: bash
-        run: echo ::set-output name=THIS_TAG::${GITHUB_REF/refs\/tags\//}
-        
-      - name: Debug tag parsing
-        run: echo '${{ steps.get_tag.outputs.THIS_TAG }}'
-        
-      - name: Discord Notification
-        uses: rjstone/discord-webhook-notify@v1.0.4
-        with:
-          severity: info
-          description: "Project Build"
-          # note: we could also link directly to the asset, but that might not be very user-friendly
-          details: "${{ github.server_url }}/${{ github.repository }}/releases/tag/${{ steps.get_tag.outputs.THIS_TAG }}"
-          webhookUrl: ${{ secrets.DISCORD_BUILD_WEBHOOK }}
