--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: Build Project
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch
+#  push:
+#    branches: [ "main" ]
   
 jobs:
   Build_Release:
