--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,12 +93,12 @@ jobs:
           name: Debug
       
       - name: Automatic Releases
-        uses: marvinpinto/action-automatic-releases@526ce12c6675bbe6e0e9a4169c90d09a3f7ad3e2
+        uses: marvinpinto/action-automatic-releases@latest #maybe this fixed auto release versioning?
         id: "automatic_releases"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}" #this is gonna give me a stroke
-          automatic_release_tag: "Ghostmode"
-          #prerelease: false
+          automatic_release_tag: "latest"
+          prerelease: false
           files: |
             Release.zip
             Debug.zip
