--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Build Project
 
 on:
-  - workflow_dispatch:
-  - release:
-      types:
-        - created
+  workflow_dispatch:
+  release:
+    types: [published]
 #  push:
 #    branches: [ "main" ]
   
